# Rasp4Home

./: .gitignore  CMakeLists.txt  LICENSE  config.json  datamanager.cpp  datamanager.h  inputparser.cpp  inputparser.h  main.cpp  main.ui  mainwindow.cpp  mainwindow.h  motivationalquote.cpp  motivationalquote.h  motivationalquotemanager.cpp  motivationalquotemanager.h  qrcodeservice.cpp  qrcodeservice.h  restconnector.cpp  restconnector.h  timedisplay.cpp  timedisplay.h  weather.cpp  weather.h  weather.ui  weatherdata.cpp  weatherdata.h  weatherdatamanager.cpp  weatherdatamanager.h  wiki.cpp
concept/: cleaner concept.leo  main.sketch  ~`~main.sketch
old/: mainPalette.xml  mainwindow.cpp  mainwindow.h  qrcodeservice.cpp  restconnector.cpp  utils.h  weather.cpp  weather.ui  wiki.h  wiki.ui
